--- a/pyt-contabilidad/pyt-app/src/resource/view/empresa/empresa.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/empresa/empresa.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="489.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.empresa.EmpresaCRUBean">
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
+	prefWidth="489.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="org.pyt.app.beans.empresa.EmpresaCRUBean">
 	<bottom>
 		<FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
 			<children>
@@ -25,7 +27,8 @@
 		</FlowPane>
 	</bottom>
 	<center>
-		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="469.0" BorderPane.alignment="CENTER">
+		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0"
+			prefWidth="469.0" BorderPane.alignment="CENTER">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
@@ -47,7 +50,8 @@
 				<TextField fx:id="nombre" GridPane.columnIndex="3" />
 				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Nit" GridPane.rowIndex="1" />
 				<TextField fx:id="nit" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-				<Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="76.0" text="Digito" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+				<Label alignment="CENTER" contentDisplay="CENTER" prefHeight="29.0" prefWidth="76.0" text="Digito" GridPane.columnIndex="2"
+					GridPane.rowIndex="1" />
 				<TextField fx:id="digito" GridPane.columnIndex="3" GridPane.rowIndex="1" />
 				<Label alignment="CENTER" prefHeight="27.0" prefWidth="90.0" text="Direccion" GridPane.rowIndex="2" />
 				<TextField fx:id="direccion" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -61,39 +65,43 @@
 				<ChoiceBox fx:id="moneda" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 				<Label alignment="CENTER" prefHeight="30.0" prefWidth="87.0" text="Contador" GridPane.rowIndex="5" />
 				<TextField fx:id="contador" alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-				<Label alignment="CENTER" prefHeight="40.0" prefWidth="68.0" text="Tarjeta Contador" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="5">
+				<Label alignment="CENTER" prefHeight="40.0" prefWidth="68.0" text="Tarjeta Contador" wrapText="true" GridPane.columnIndex="2"
+					GridPane.rowIndex="5">
 					<padding>
 						<Insets left="10.0" />
 					</padding>
 				</Label>
 				<TextField fx:id="nContador" alignment="CENTER" prefHeight="25.0" prefWidth="142.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-				<Label alignment="CENTER" contentDisplay="CENTER" prefHeight="48.0" prefWidth="95.0" text="Representante Legal" textAlignment="CENTER" wrapText="true" GridPane.rowIndex="6" />
+				<Label alignment="CENTER" contentDisplay="CENTER" prefHeight="48.0" prefWidth="95.0" text="Representante Legal" textAlignment="CENTER"
+					wrapText="true" GridPane.rowIndex="6" />
 				<TextField fx:id="representante" alignment="CENTER" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-				<Label fx:id="codigo" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="163.0" textAlignment="CENTER" GridPane.columnIndex="1" />
+				<Label fx:id="codigo" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="163.0" textAlignment="CENTER"
+					GridPane.columnIndex="1" />
 			</children>
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin>
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
+			<BorderPane.margin>
+				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+			</BorderPane.margin>
+			<padding>
+				<Insets bottom="10.0" />
+			</padding>
 		</GridPane>
 	</center>
 	<cursor>
 		<Cursor fx:constant="DEFAULT" />
 	</cursor>
-   <top>
-      <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Empresa" textAlignment="CENTER">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </BorderPane.margin>
-      </FlowPane>
-   </top>
+	<top>
+		<FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+			<children>
+				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+					text="Empresa" textAlignment="CENTER">
+					<font>
+						<Font name="System Bold Italic" size="18.0" />
+					</font>
+				</Label>
+			</children>
+			<BorderPane.margin>
+				<Insets bottom="5.0" top="5.0" />
+			</BorderPane.margin>
+		</FlowPane>
+	</top>
 </BorderPane>
