--- a/pyt-contabilidad/pyt-app/src/resource/view/dinamico/listDetalle.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/dinamico/listDetalle.fxml
@@ -3,70 +3,82 @@
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="478.0" prefWidth="553.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.dinamico.ListaDetalleBean">
-	<!-- TODO Add Nodes -->
-	<bottom>
-		<HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="25.999900000002526" prefWidth="200.0" BorderPane.alignment="CENTER">
-			<children>
-				<Button contentDisplay="CENTER" onAction="#agregar" mnemonicParsing="false" text="Agregar" textAlignment="CENTER" />
-				<Button fx:id="editar" mnemonicParsing="false" onAction="#editar" text="Editar" />
-				<Button fx:id="eliminar" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</HBox>
-	</bottom>
-	<center>
-		<VBox alignment="TOP_LEFT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_LEFT">
-			<children>
-				<TableView fx:id="tabla" prefHeight="288.0" prefWidth="533.0" onMouseClicked="#seleccionar">
-					<columns>
-						<TableColumn prefWidth="75.0" text="Renglon">
-							<cellValueFactory>
-								<PropertyValueFactory property="renglon" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn fx:id="categoria" maxWidth="5000.0" minWidth="10.0" prefWidth="130.0" text="Categoria Gasto" />
-						<TableColumn fx:id="concepto" maxWidth="5000.0" minWidth="10.0" prefWidth="88.0" text="Concepto" />
-						<TableColumn fx:id="centroCosto" maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="Centro Costo" />
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="56.0" text="Valor">
-							<cellValueFactory>
-								<PropertyValueFactory property="valorBruto" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="92.0" text="Valor Neto">
-							<cellValueFactory>
-								<PropertyValueFactory property="valorNeto" />
-							</cellValueFactory>
-						</TableColumn>
-					</columns>
-				</TableView>
-				<HBox fx:id="paginador" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="455.0" />
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" fx:id="x1" />
-			</BorderPane.margin>
-		</VBox>
-	</center>
-	<top>
-		<GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-		</GridPane>
-	</top>
+<BorderPane prefHeight="478.0" prefWidth="553.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.dinamico.ListaDetalleBean">
+  <!-- TODO Add Nodes -->
+  <bottom>
+    <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="25.999900000002526" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <children>
+        <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#agregar" text="Agregar" textAlignment="CENTER" />
+        <Button fx:id="editar" mnemonicParsing="false" onAction="#editar" text="Editar" />
+        <Button fx:id="eliminar" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </HBox>
+  </bottom>
+  <center>
+    <VBox alignment="TOP_LEFT" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_LEFT">
+      <children>
+        <TableView fx:id="tabla" onMouseClicked="#seleccionar" prefHeight="288.0" prefWidth="533.0">
+          <columns>
+            <TableColumn prefWidth="75.0" text="Renglon">
+              <cellValueFactory>
+                <PropertyValueFactory property="renglon" />
+              </cellValueFactory>
+            </TableColumn>
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="130.0" text="Categoria Gasto" fx:id="categoria" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="88.0" text="Concepto" fx:id="concepto" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="Centro Costo" fx:id="centroCosto" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="56.0" text="Valor">
+              <cellValueFactory>
+                <PropertyValueFactory property="valorBruto" />
+              </cellValueFactory>
+            </TableColumn>
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="92.0" text="Valor Neto">
+              <cellValueFactory>
+                <PropertyValueFactory property="valorNeto" />
+              </cellValueFactory>
+            </TableColumn>
+          </columns>
+        </TableView>
+        <HBox fx:id="paginador" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="455.0" />
+        <HBox alignment="TOP_RIGHT" prefHeight="26.0" prefWidth="533.0">
+          <children>
+            <Label text="Total">
+              <HBox.margin>
+                <Insets right="10.0" />
+              </HBox.margin>
+            </Label>
+            <Label fx:id="sumatoria" text="">
+              <HBox.margin>
+                <Insets right="5.0" />
+              </HBox.margin>
+            </Label>
+          </children>
+        </HBox>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" fx:id="x1" />
+      </BorderPane.margin>
+    </VBox>
+  </center>
+  <top>
+    <GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+    </GridPane>
+  </top>
 </BorderPane>
