--- a/pyt-contabilidad/pyt-app/src/resource/view/dinamico/listDetalle.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/dinamico/listDetalle.fxml
@@ -70,6 +70,9 @@
   </center>
   <top>
     <GridPane alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
+      <children>
+        <Button mnemonicParsing="false" onAction="#buscar" text="Buscar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
