--- a/pyt-contabilidad/pyt-app/src/resource/view/concepto/listConcepto.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/concepto/listConcepto.fxml
@@ -22,7 +22,7 @@
 						<Insets left="10.0" right="10.0" />
 					</FlowPane.margin>
 				</Button>
-				<Button mnemonicParsing="false" onAction="#del" text="Eliminar" />
+				<Button fx:id="btnDel" mnemonicParsing="false" onAction="#del" text="Eliminar"  visible="false"/>
 			</children>
 			<padding>
 				<Insets bottom="5.0" top="5.0" />
